<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="app_name">Wi-Cloud</string>
    <string name="app_account">account</string>
    <string name="app_password">password</string>
    <string name="copyright">Copyright @ 2012 ~ 2019 Jetec Electronics</string>
    <string name="tel">Tel:04–23729418</string>
    <string name="fax">Fax:04–23724011</string>
    <string name="email">E-mail:sales@jetec.com.tw</string>
    <string name="app_message">Do you want to close this app?</string>
    <string name="app_message_b1">Exit</string>
    <string name="app_message_b2">Cancel</string>
    <string name="goback">back</string>
    <string name="app_log_in">Log in</string>
    <string name="login">Wrong! Your account or password is empty!</string>
    <string name="loginerror">Account or password incorrect!</string>
    <string name="Signin">Sign in…</string>
    <string name="bar_dashboard">Dashboard</string>
    <string name="bar_hardware">Hardware</string>
    <string name="bar_alert">Notifications</string>
    <string name="bar_logout">Logout</string>
    <string name="bar_phonecall">Consultation</string>
    <string name="process">Data processing…</string>
    <string name="nodevice">No device</string>
    <string name="canvaspanel">Select a type of panel</string>
    <string name="valueText">Value</string>
    <string name="TextDescription">Display current sensor value</string>
    <string name="imageGauge">Gauge</string>
    <string name="GaugeDescription">Gauge value from a single sensor between a minimum and maximum</string>
    <string name="mintext">Min</string>
    <string name="maxtext">Max</string>
    <string name="value_t1">Sensor module</string>
    <string name="value_t2">Type of value</string>
    <string name="value_t3">Display name</string>
    <string name="value_e1">Name</string>
    <string name="value_bt">Add</string>
    <string name="add_module">Selec a sensor module</string>
    <string name="add_sensor">Selec a sensor</string>
    <string name="sensor_temperature">temperature</string>
    <string name="sensor_humidity">humidity</string>
    <string name="sensor_wind_speed">wind speed</string>
    <string name="sensor_wind_direction">wind direction</string>
    <string name="sensor_precipitation">precipitation</string>
    <string name="sensor_value">value</string>
    <string name="value_button">Sensor module or type of value is not chose.</string>
    <string name="num_button">There is no value in max or min.</string>
    <string name="dialog_title">Chose</string>
    <string name="dialog_messgae">Select function</string>
    <string name="dialog_sure">modify</string>
    <string name="dialog_del">delete</string>
    <string name="button_check">OK</string>
    <string name="wrong">Wrong value!</string>
    <string name="del_message">Confirm delete?</string>
    <string name="image_min">Min</string>
    <string name="image_max">Max</string>
    <string name="time">Time:</string>
    <string name="value">Value:</string>
    <string name="pastdata">Past data</string>
    <string name="count">device(s)</string>
    <string name="connect">(Disconnected)</string>
    <string name="setinformation">Setting Imformation</string>
    <string name="nowdata">Real time data</string>
    <string name="connectstatus">Status</string>
    <string name="sensors">Sensor quantity</string>
    <string name="interval">Data interval</string>
    <string name="intervals">Graph interval</string>
    <string name="checkconnect">Connected</string>
    <string name="checkconnects">Disconnected</string>
    <string name="seconds">s</string>
    <string name="hour">h</string>
</resources>
