<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@drawable/frame"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:textColor="@color/colorText"
            android:layout_weight="1"
            android:text="@string/value_t1"
            android:gravity="center_vertical"
            tools:ignore="InefficientWeight" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:theme="@style/SpnStyle"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:textColor="@color/colorText"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/value_t2" />

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:theme="@style/SpnStyle"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:textColor="@color/colorText"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/value_t3" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/frame"
            android:ems="10"
            android:inputType="textPersonName"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:hint="@string/value_e1"
            tools:ignore="Autofill" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/add_button_style"
                android:text="@string/value_bt" />
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>